# agentic-strategy-evolution

./: CLAUDE.md  MANIFEST.in  README.md  defaults.yaml  pyproject.toml  run_campaign.py  run_iteration.py
docs/: architecture.md  campaign-authoring-guide.md  data-model.md  friction-245-resolution.md  nous-wiki.md  protocol.md  quickstart.md  security.md
examples/: campaign.yaml
orchestrator/: arm_sweep.py  cache_stats.py  campaign.py  campaign_index.py  channels.py  claude_md.py  cli.py  cli_dispatch.py  complexity_tier.py  composite_score.py  create_campaign.py  critic.py  defaults.yaml  deployment_recommendation.py  dispatch.py  engine.py  executor.py  explore_design.py  fastfail.py  findings_classifier.py  gates.py  goal_driven.py  inline_dispatch.py  iteration.py  iteration_mode.py  lineage.py  llm_dispatch.py  meta_findings.py  parallel_arms.py  plot_specs.py  power.py  pre_work.py  principles_classifier.py  principles_posterior.py  promote_gate.py  prompt_loader.py  refute_constraints.py  repo_cache.py  reproducibility.py  routines.py  (+7 more)
schemas/: bundle.schema.yaml  campaign.schema.yaml  execute_analyze.schema.json  experiment_plan.schema.yaml  findings.schema.json  state.schema.json
scripts/: retrieve_wiki_context.py  visualize_campaign.py
templates/: campaign.yaml
tests/: CLAUDE.md  conftest.py  test_arm_sweep.py  test_atomic_state_writes.py  test_cache_stats.py  test_campaign.py  test_campaign_ground_truth.py  test_campaign_index.py  test_channels.py  test_claude_md.py  test_cli.py  test_cli_dispatch.py  test_complexity_tier.py  test_composite_score.py  test_create_campaign.py  test_critic.py  test_deployment_recommendation.py  test_design_artifact_assertion.py  test_dispatch.py  test_dose_response.py  test_empirical_content.py  test_engine.py  test_engine_search_continuation.py  test_execute_artifact_assertion.py  test_execute_stop_hook.py  test_executor.py  test_fastfail.py  (+51 more)
(+40 files in other folders)
