[project]
name = "nous"
version = "0.1.0"
description = "Nous — hypothesis-driven experimentation framework for software systems"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "jsonschema>=4.20.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
nous = "orchestrator.cli:main"

[tool.setuptools.packages.find]
include = ["orchestrator*", "prompts*"]

[tool.setuptools.package-data]
orchestrator = ["schemas/*.yaml", "schemas/*.json", "templates/*.json", "templates/*.yaml", "templates/*.md", "defaults.yaml"]
prompts = ["**/*.md"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
